--- a/Curso-FullStack-OneBitCode/JavaScript/JavaScript III JS Moderno/sistema-votação/package.json
+++ b/Curso-FullStack-OneBitCode/JavaScript/JavaScript III JS Moderno/sistema-votação/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
